Personal Portfolio Project link added

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -27,7 +27,7 @@
                                     <p>A text-based python program to convert strings to morse code.</p>
                                 </li>
 
-                                <li><a href="#">Personal Portfolio Website </a>(What you are looking at currently!)
+                                <li><a href="https://github.com/zarafsha-u/Professional-Portfolio-Wesbite.git">Personal Portfolio Website </a>(What you are looking at currently!)
                                 <p>Website to present my projects and skills. </p>
                                 </li>
 
